refactor: Enhance file transfer synchronization in FileSender and optimize thread handling in ReceiverOptimized